# krul-interpreter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  KrulProgram.cpp  KrulProgram.h  hello.cpp  main.cpp
src/http/: CurlHTTPGetter.cpp  CurlHTTPGetter.h  HTTPException.cpp  HTTPGetter.h  HTTPResponse.cpp  http.h
src/http/curl/: CurlHTTPGetter.cpp  CurlHTTPGetter.h  CurlWrapper.cpp  CurlWrapper.h
src/interpreter/: CallStack.h  Context.h  Instruction.h  LabelRegistry.h  MapLabelRegistry.cpp  MapLabelRegistry.h  MapVariableRegistry.cpp  MapVariableRegistry.h  Program.h  Result.cpp  Result.h  Stack.h  VariableRegistry.h  VectorCallStack.cpp  VectorCallStack.h  VectorStack.cpp  VectorStack.h  types.h
src/interpreter/exception/: InterpretingException.cpp  InterpretingException.h  TypeConversionException.cpp  TypeConversionException.h  UndefinedLabelException.cpp  UndefinedLabelException.h  UndefinedVariableException.cpp  UndefinedVariableException.h
src/interpreter/instructions/: AbsoluteValue.cpp  AbsoluteValue.h  Add.cpp  Add.h  Concatenate.cpp  Concatenate.h  Decrement.cpp  Decrement.h  Divide.cpp  Divide.h  Duplicate.cpp  Duplicate.h  End.cpp  End.h  Function.cpp  Function.h  Goto.cpp  Goto.h  (+46 more)
src/parser/: DefaultInstructionFactory.cpp  DefaultInstructionFactory.h  DefaultParser.cpp  DefaultParser.h  InstructionFactory.h  LabelRegistry.h  ParsedProgram.cpp  ParsedProgram.h  Parser.h
tests/: CMakeLists.txt  hello-test.cpp  main.cpp
tests/interpreter/: MapVariableRegistry-test.cpp  VectorCallStack-test.cpp  VectorStack-test.cpp
(+39 files in other folders)
